# mobile-robot

./: README.md
arduino/arduino_control_with_python/: arduino.py  arduino_test.py
arduino/firmware/: PID.h  commands.h  main.ino  motor_driver.ino
linux/src/gmapping/launch/: robot_gmapping.launch
linux/src/navigation/launch/: move_base.launch
linux/src/odom/: CMakeLists.txt  package.xml
linux/src/odom/src/: odom.cpp  odom_encoder_only.cpp
raspi/src/encoders/: CMakeLists.txt  package.xml
raspi/src/encoders/scripts/: arduino.py  encoders_gg.py
raspi/src/encoders/srv/: encoders.srv
raspi/src/imu/: CMakeLists.txt  package.xml
raspi/src/imu/launch/: imu.launch
raspi/src/imu/src/: imu.cpp
raspi/src/imu/srv/: imu.srv
raspi/src/laser_scanner/: CMakeLists.txt  package.xml
raspi/src/laser_scanner/launch/: delta_2b_lidar.launch  static_tf.launch
raspi/src/laser_scanner/src/: laser_scan.cpp
