<?xml version="1.0"?>
<package>
		<name>laser_scanner</name>
		<version>0.0.1</version>
		<description>publish the laser's data</description>

		<maintainer email="zzy0310@live.cn">zzy</maintainer>


		<license>BSD</license>


		<buildtool_depend>catkin</buildtool_depend>									    
		<build_depend>roscpp</build_depend>
		<build_depend>std_msgs</build_depend>
		<build_depend>sensor_msgs</build_depend>

																	  
		<run_depend>roscpp</run_depend>
        <run_depend>message_runtime</run_depend>
        <run_depend>sensor_msgs</run_depend>
		<run_depend>std_msgs</run_depend>


		<export>

		</export>
</package>

